fix(comments): add @source for BlockNote shadcn Tailwind classes
BlockNote's shadcn components use dynamic Tailwind classes like
w-[300px] that Tailwind v4 doesn't detect from node_modules. Add
@source directive to scan @blocknote/shadcn dist. Also change
TabsContent overflow from hidden to visible so floating composer
isn't clipped.

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -2,6 +2,8 @@
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
 
+@source "../../node_modules/@blocknote/shadcn/dist";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -125,11 +127,3 @@
   }
 }
 
-/* BlockNote comment composer sizing */
-.bn-comment-editor {
-  min-width: 300px;
-}
-
-.bn-thread {
-  min-width: 280px;
-}
